add new website from server na

--- a/xem-phim-bo/cao-oc-dam-mau/index.html
+++ b/xem-phim-bo/cao-oc-dam-mau/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1785,18 +1785,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dac-vu-khong-gian-khong-lui-buoc" title="Đặc Vụ Không Gian: Không Lùi Bước">
+          <a class="list-top-movie-link" href="/phim-moi/truong-nham-nhi" title="Trường Nhảm Nhí">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dac-vu-khong-gian-khong-lui-buoc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truong-nham-nhi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đặc Vụ Không Gian: Không Lùi Bước
+             Trường Nhảm Nhí
             </span>
             <span class="list-top-movie-item-en">
-             Evangelion: 2.0 You Can (Not) Advance
+             BS High
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1807,18 +1807,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/duong-gia-tuong" title="Dương Gia Tướng">
+          <a class="list-top-movie-link" href="/phim-moi/freud" title="Freud">
            <span class="status">
-            SD Lồng Tiếng
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/duong-gia-tuong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/freud-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Dương Gia Tướng
+             Freud
             </span>
             <span class="list-top-movie-item-en">
-             The Yang’s Saga
+             Freud
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hanasaki-mai-khong-im-lang-phan-2" title="Hanasaki Mai không im lặng (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hanasaki-mai-khong-im-lang-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hanasaki Mai không im lặng (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Hanasaki Mai Speaks Out (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1829,21 +1851,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chang-trai-cuong-sach-se-than-yeu-cua-toi" title="Chàng trai cuồng sạch sẽ thân yêu của tôi">
+          <a class="list-top-movie-link" href="/phim-moi/ngay-xua-ngay-xua-phan-7" title="Ngày Xửa Ngày Xưa (Phần 7)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chang-trai-cuong-sach-se-than-yeu-cua-toi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngay-xua-ngay-xua-phan-7-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chàng trai cuồng sạch sẽ thân yêu của tôi
+             Ngày Xửa Ngày Xưa (Phần 7)
             </span>
             <span class="list-top-movie-item-en">
-             Use For My Talent
+             Once Upon a Time (Season 7)
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1851,40 +1873,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-to-tinh-phan-3" title="Cuộc chiến tỏ tình (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/tham-tu-pho-tau-phan-2" title="Thám Tử Phố Tàu (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-to-tinh-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-pho-tau-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cuộc chiến tỏ tình (Phần 3)
+             Thám Tử Phố Tàu (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Kaguya-sama: Love Is War (Season 3)
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/su-menh-va-con-tim" title="Sứ Mệnh Và Con Tim">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-menh-va-con-tim-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Sứ Mệnh Và Con Tim
-            </span>
-            <span class="list-top-movie-item-en">
-             The Crown Princess
+             Detective Chinatown Season 2
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
