add new website from server na

--- a/xem-phim-bo/ha-bach-te/index.html
+++ b/xem-phim-bo/ha-bach-te/index.html
@@ -1188,7 +1188,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             9
+             10
             </dd>
             <br/>
            </dl>
@@ -1724,18 +1724,84 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bay-ngay-2" title="Bảy Ngày">
+          <a class="list-top-movie-link" href="/phim-moi/tuoi-cua-dream-thuc-hien" title="Tuổi của Dream Thực hiện">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bay-ngay-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tuoi-cua-dream-thuc-hien-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bảy Ngày
+             Tuổi của Dream Thực hiện
             </span>
             <span class="list-top-movie-item-en">
-             Seven Days
+             Age of Dream Fulfilling
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-co-nang-tuyet-voi" title="Những Cô Nàng Tuyệt Vời">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-co-nang-tuyet-voi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Những Cô Nàng Tuyệt Vời
+            </span>
+            <span class="list-top-movie-item-en">
+             Honey Girls
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/wife-of-a-spy" title="Wife of a Spy">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/wife-of-a-spy-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Wife of a Spy
+            </span>
+            <span class="list-top-movie-item-en">
+             Wife of a Spy
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-con-soi-thoi-chien" title="Những Con Sói Thời Chiến">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-con-soi-thoi-chien-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Những Con Sói Thời Chiến
+            </span>
+            <span class="list-top-movie-item-en">
+             Wolves of War
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1746,84 +1812,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/de-che-sup-do" title="Đế Chế Sụp Đổ">
+          <a class="list-top-movie-link" href="/phim-moi/mot-noi-xa" title="Một nơi xa">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/de-che-sup-do-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mot-noi-xa-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đế Chế Sụp Đổ
+             Một nơi xa
             </span>
             <span class="list-top-movie-item-en">
-             Downfall
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/manh-the-thuc-than" title="Manh Thê Thực Thần">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/manh-the-thuc-than-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Manh Thê Thực Thần
-            </span>
-            <span class="list-top-movie-item-en">
-             Cinderella Chef
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/trick-or-treat-scooby-doo" title="Trick or Treat Scooby-Doo!">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trick-or-treat-scooby-doo-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Trick or Treat Scooby-Doo!
-            </span>
-            <span class="list-top-movie-item-en">
-             Trick or Treat Scooby-Doo!
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-nang-dau-go" title="Cô Nàng Đầu Gỗ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-nang-dau-go-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cô Nàng Đầu Gỗ
-            </span>
-            <span class="list-top-movie-item-en">
-             Smile To Life
+             Faraway
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
