add new website from server na

--- a/xem-phim-bo/truc-tam/index.html
+++ b/xem-phim-bo/truc-tam/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1584,7 +1584,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lust, Caution
             </span>
             <span class="list-top-movie-item-view">
-             65 lượt xem
+             67 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
             </span>
@@ -1606,9 +1606,31 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Dragon Hunting.Soul Suppressing Coffin
             </span>
             <span class="list-top-movie-item-view">
-             62 lượt xem
+             63 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-en">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             54 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
             </span>
            </div>
           </a>
@@ -1628,7 +1650,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Brothers For Life (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             53 lượt xem
+             54 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1650,29 +1672,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              The Blood of Youth
             </span>
             <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-en">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
+             52 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1693,18 +1693,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bang-chung-the-xac" title="Bằng chứng thể xác">
+          <a class="list-top-movie-link" href="/phim-moi/bat-ngo-cuoi-thang-ramadan" title="Bất ngờ cuối tháng Ramadan">
            <span class="status">
-            HD Vietsub
+            Vietsub - HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bang-chung-the-xac-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bat-ngo-cuoi-thang-ramadan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bằng chứng thể xác
+             Bất ngờ cuối tháng Ramadan
             </span>
             <span class="list-top-movie-item-en">
-             Body of Evidence
+             Crashing Eid
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/su-tuyet-chung-can-ke" title="Sự Tuyệt Chủng Cận Kề">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-tuyet-chung-can-ke-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Sự Tuyệt Chủng Cận Kề
+            </span>
+            <span class="list-top-movie-item-en">
+             Near Extinction Shangri-La
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/me-time-cuoi-tuan-cua-bo" title="Me Time: Cuối tuần của bố">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/me-time-cuoi-tuan-cua-bo-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Me Time: Cuối tuần của bố
+            </span>
+            <span class="list-top-movie-item-en">
+             Me Time
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1715,40 +1759,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-cincinnati-kid" title="The Cincinnati Kid">
+          <a class="list-top-movie-link" href="/phim-moi/ninja" title="Ninja">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-cincinnati-kid-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ninja-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             The Cincinnati Kid
+             Ninja
             </span>
             <span class="list-top-movie-item-en">
-             The Cincinnati Kid
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-khong-gian-2" title="Cuộc Chiến Không Gian">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-khong-gian-2019-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cuộc Chiến Không Gian
-            </span>
-            <span class="list-top-movie-item-en">
-             For All Mankind
+             Ninja
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1759,43 +1781,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xin-hay-ban-cho-toi-mot-doi-canh" title="Xin Hãy Ban Cho Tôi Một Đôi Cánh">
+          <a class="list-top-movie-link" href="/phim-moi/fate-zero-phan-2" title="Fate/Zero (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xin-hay-ban-cho-toi-mot-doi-canh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/fatezero-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Xin Hãy Ban Cho Tôi Một Đôi Cánh
+             Fate/Zero (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Please Give Me A Pair Of Wings
+             Fate/Zero (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/given-khoi-day-dam-me-ban-dien-anh" title="GIVEN- Khơi Dậy Đam Mê (Bản Điện Ảnh)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/given-khoi-day-dam-me-ban-dien-anh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             GIVEN- Khơi Dậy Đam Mê (Bản Điện Ảnh)
-            </span>
-            <span class="list-top-movie-item-en">
-             Given The Movie
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
